--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Simone"
+title: "Moritz Greiwe"
 about:
   template: jolla
   image: profile.jpg
@@ -18,8 +18,6 @@ about:
       href: https://scholar.google.com
 ---
 
-I am a Ph.D. student in upside-down studies at Sunspot University.
-
-Most of my current research is driven by trying to find an answer to the age-old question of “How cute am I?"
+I am a graduate student in Economics at Brown University.
 
 Please feel free to get in touch!
