--- a/research/paper-1.qmd
+++ b/research/paper-1.qmd
@@ -1,11 +1,6 @@
 ---
-title: "My First Paper"
+title: "Coming soon"
 author: 
-  - Simone
-  - Matthew DeHaven
+  - Moritz Greiwe
 date: "January 01, 2024"
 ---
-
-A description of my paper.
-
-Could include a photo, or links, or anything at all!
